[gd_scene load_steps=15 format=3 uid="uid://b5ef1jdyk6v7t"]

[ext_resource type="Script" path="res://Scripts/Game5/game5.gd" id="1_0cc26"]
[ext_resource type="Script" path="res://Scripts/Game5/player_manager.gd" id="2_el0jc"]
[ext_resource type="AudioStream" uid="uid://ckf1txct8ar5o" path="res://Assets/Sounds/Game5/background_music.mp3" id="2_nuhyw"]
[ext_resource type="Script" path="res://Scripts/Game5/ghost_manager.gd" id="2_o36b7"]
[ext_resource type="AudioStream" uid="uid://bfe2c8kce6ukt" path="res://Assets/Sounds/Game5/pacman_beginning.wav" id="2_x05cm"]
[ext_resource type="AudioStream" uid="uid://cc1d28u8kf7pm" path="res://Assets/Sounds/Game5/pacman_intermission.wav" id="3_g8wgl"]
[ext_resource type="Script" path="res://Scripts/Game5/fruits.gd" id="4_88e48"]
[ext_resource type="Script" path="res://Scripts/Game5/level_manager.gd" id="4_hevy1"]
[ext_resource type="Script" path="res://Scripts/Game5/ui.gd" id="4_rxbc8"]
[ext_resource type="FontFile" uid="uid://dlqs53330j0eu" path="res://Assets/Emulogic-zrEw.ttf" id="5_kvyoi"]
[ext_resource type="AudioStream" uid="uid://bffips54bmrxu" path="res://Assets/Sounds/Game5/pacman_blueghosts.mp3" id="7_nqxow"]
[ext_resource type="AudioStream" uid="uid://c6ouccoty85gx" path="res://Assets/Sounds/Game5/pacman_eatghost.wav" id="8_1mc5g"]
[ext_resource type="AudioStream" uid="uid://b5uvu2ahf2f5m" path="res://Assets/Sounds/Game5/pacman_extrapac.wav" id="9_23bca"]
[ext_resource type="AudioStream" uid="uid://ccnx2wjyw85" path="res://Assets/Sounds/Game5/pacman_eatfruit.wav" id="9_fk5on"]

[node name="Game5" type="Node2D"]
script = ExtResource("1_0cc26")

[node name="Players" type="Node" parent="."]
script = ExtResource("2_el0jc")

[node name="Ghosts" type="Node" parent="."]
script = ExtResource("2_o36b7")

[node name="Fruits" type="Node" parent="."]
script = ExtResource("4_88e48")

[node name="Level" type="Node" parent="."]
script = ExtResource("4_hevy1")

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_nuhyw")
autoplay = true

[node name="IntroMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_x05cm")

[node name="PowerPelletMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_nqxow")

[node name="GhostEaten" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_1mc5g")

[node name="FruitEaten" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_fk5on")

[node name="ExtraLifeMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_23bca")

[node name="LevelCompleteMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_g8wgl")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 210.0
offset_right = 630.0
offset_bottom = 600.0
grow_horizontal = 2
script = ExtResource("4_rxbc8")

[node name="Score" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 3.0
offset_right = -60.0
offset_bottom = 26.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("5_kvyoi")
text = "1UP: 99999"
vertical_alignment = 1

[node name="Lives" type="HBoxContainer" parent="UI"]
layout_mode = 0
offset_top = 3.0
offset_right = 200.0
offset_bottom = 31.0

[node name="GameOver" type="Label" parent="UI"]
visible = false
z_index = 5
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.0
offset_top = -91.0
offset_right = 202.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.246609, 0.468349, 1, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_kvyoi")
theme_override_font_sizes/font_size = 20
text = "-GAME OVER-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpaceToPlay" type="Label" parent="UI"]
visible = false
z_index = 5
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -253.0
offset_top = -51.0
offset_right = 203.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.246609, 0.468349, 1, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_kvyoi")
theme_override_font_sizes/font_size = 18
text = "PRESS SPACE TO PLAY"
horizontal_alignment = 1
vertical_alignment = 1
